# murano

./: .gitignore  AUDITING.md  INSTALL.md  LICENSE  MURANO_AUDIT_REPORT.md  MURANO_AUDIT_REPORT_3.md  MURANO_AUDIT_REPORT_4.md  MURANO_PLAN.md  README.md  pyproject.toml
integrations/: README.md
integrations/claude-desktop/: mcp-config.json
integrations/hermes/: murano-skill.md
integrations/openclaw/: murano-skill.yaml
scripts/: dev.sh
src/murano/: __init__.py  backup.py  cli.py  config.py  licenses.py  security.py  usage.py  venice.py
src/murano/api/: __init__.py  _reload_entry.py  routes.py  scheduler.py  schemas.py  server.py
src/murano/capture/: __init__.py  feed.py  web.py
src/murano/chat/: __init__.py  answer.py  retriever.py
src/murano/index/: __init__.py  db.py  embed.py  indexer.py  search.py
src/murano/mcp/: __init__.py  server.py
src/murano/tree/: __init__.py  build.py  cluster.py  db.py  retrieve.py  summarize.py
src/murano/ui/: __init__.py  routes.py
src/murano/ui/static/: app.js  style.css
src/murano/ui/templates/: _file.html  base.html  browse.html  chat.html  settings.html
src/murano/vault/: __init__.py  chunker.py  watcher.py
tests/: test_api.py  test_capture.py  test_chat.py  test_chunker.py  test_config.py  test_db.py  test_indexer.py  test_mcp.py  test_phase7.py  test_security.py  test_tree.py  test_venice.py  test_watcher.py
